--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 *{
     margin: 0;
     padding: 0;
@@ -17,8 +24,12 @@ body{
 }
 
 .header .header__navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-evenly;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
 }
 
 #menuIcon {
@@ -30,9 +41,13 @@ body{
 }
 
 .header__navigation .navigation__menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style: none;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .navigation__menu .menu__item {
@@ -43,6 +58,8 @@ body{
 .navigation__menu .menu__item a {
     padding: 20px;
     text-decoration: none;
+    -webkit-transition: all 0.4s linear;
+    -o-transition: all 0.4s linear;
     transition: all 0.4s linear;
     color: rgb(255, 255, 255);
 }
@@ -53,7 +70,10 @@ body{
 }
 
 ul li p{
-    text-size-adjust: 5%;
+    -webkit-text-size-adjust: 5%;
+       -moz-text-size-adjust: 5%;
+        -ms-text-size-adjust: 5%;
+            text-size-adjust: 5%;
     text-align: center;
     color: rgb(63, 63, 63);
     padding-top: 0.2rem;
@@ -70,7 +90,10 @@ main {
 }
 
 h2{
-    text-size-adjust: 10%;
+    -webkit-text-size-adjust: 10%;
+       -moz-text-size-adjust: 10%;
+        -ms-text-size-adjust: 10%;
+            text-size-adjust: 10%;
     text-align: center;
     color: crimson;
     padding-top: 1rem;
@@ -86,10 +109,15 @@ h2{
 }
 
 .imag{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: Wrap;
-    justify-content:space-around;
-    align-content: space-between;
+    -ms-flex-wrap: Wrap;
+        flex-wrap: Wrap;
+    -ms-flex-pack:distribute;
+        justify-content:space-around;
+    -ms-flex-line-pack: justify;
+        align-content: space-between;
     padding: 0.5rem;
     
 }
@@ -101,22 +129,32 @@ h2{
 }
 
 .contenedor{
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
     padding: 2%;
 }
 
 .contenedor .form .form-header{
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
 }
 
 .contenedor .form .form-header .titulo{
     font-family: arial;
     color: #ffd214;
     margin-left: 10px;
-    text-size-adjust: 10%;
+    -webkit-text-size-adjust: 10%;
+       -moz-text-size-adjust: 10%;
+        -ms-text-size-adjust: 10%;
+            text-size-adjust: 10%;
     text-align: center;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding-top: 2rem;
 }
 
@@ -129,8 +167,11 @@ h2{
 }
 
 .contenedor .form .form-label{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
     font-size: 16px;
     font-family: arial;
     font: bolder;
@@ -144,8 +185,11 @@ h2{
     font-family: arial;
     color: rgb(0, 0, 0);
     width: 90%;
-    justify-content: center;
-    align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
     margin-left: 5%;
     border: none;
     border-top: solid 4px #ffd214;
@@ -161,7 +205,9 @@ h2{
     font-weight:lighter;
     color: #000000;
     background-color: #ffd214;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border: none;
 }
 
@@ -174,23 +220,43 @@ h2{
 }
 
 .slider ul{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding: 0;
     width: 400%;
-    animation: cambio 20s infinite;
-    animation-direction: alternate;
-    animation-timing-function: linear;
+    -webkit-animation: cambio 20s infinite;
+            animation: cambio 20s infinite;
+    -webkit-animation-direction: alternate;
+            animation-direction: alternate;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
 }
 
 .slider li{
     list-style: none;
     width: 100%;
-    box-shadow: -10px 5px 60px -20px;
+    -webkit-box-shadow: -10px 5px 60px -20px;
+            box-shadow: -10px 5px 60px -20px;
     
 }
 
 .slider img{
     width: 100%;
+}
+
+@-webkit-keyframes cambio {
+    0%{margin-left: 0;}
+    20%{margin-left: 0;}
+
+    25%{margin-left: -100%;}
+    45%{margin-left: -100%;}
+
+    50%{margin-left: -200%;}
+    70%{margin-left: -200%;}
+
+    75%{margin-left: -300%;}
+    100%{margin-left: -300%;}
 }
 
 @keyframes cambio {
@@ -209,26 +275,36 @@ h2{
 
 footer{
     width: 100%;
-    background-image: linear-gradient(to bottom, rgb(202, 142, 13),#ffd214);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(201, 201, 201)),to(#ffffff));
+    background-image: -o-linear-gradient(top, rgb(201, 201, 201),#ffffff);
+    background-image: linear-gradient(to bottom, rgb(201, 201, 201),#ffffff);
 }
 
 footer .footergrande{
     width: 100%;
     margin: auto;
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-row: repeat (2,1fr);
     text-align: center;
     padding: 20px 0px;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 footer .footergrande .box figure{
     width: 100%;
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 footer .footergrande .box figure img{
@@ -256,6 +332,8 @@ footer .footergrande .redes-sociales a{
     margin-right: auto;
     background-color: rgb(63, 63, 63);
     text-align:center;
+    -webkit-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
     transition: all 300ms ease;
     border-radius: 20px;
 }
@@ -266,7 +344,7 @@ footer .footergrande .redes-sociales a:hover{
 }
 
 footer .subfooter{
-    background-color: rgb(63, 63, 63);
+    background-color: crimson;
     text-align: center;
     padding: 10px;
     color: white;
@@ -279,13 +357,22 @@ footer .subfooter{
     }
 
     #menuIcon {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
 
     .header .header__navigation {
-        flex-direction: column;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
 
     .header__navigation .navigation__menu {
@@ -304,6 +391,7 @@ footer .subfooter{
     }
 
     footer .footergrande {
+        -ms-grid-columns: unset;
         grid-template-columns: unset;
     }
 
