--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,54 @@
+* {
+  margin: 0;
+  padding: 0; }
+
+body {
+  font-family: Arial;
+  font-size: 14px;
+  background-image: url(../imagenes/patt3.png); }
+
 .header {
   background-color: black;
   position: sticky;
   width: 100%;
   z-index: 9999; }
-
-.header .header__navigation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  justify-content: space-evenly; }
-
-#navMenu {
-  padding-left: 0; }
-
-#menuIcon {
-  margin: 2vh;
-  display: none;
-  cursor: pointer;
-  color: #ffd214;
-  padding: 3px; }
-
-.header__navigation .navigation__menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
-  margin-bottom: 0;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
-
-.navigation__menu .menu__item {
-  margin: 0.8vw;
-  text-align: center; }
-
-.navigation__menu .menu__item a {
-  padding: 20px;
-  text-decoration: none;
-  -webkit-transition: all 0.4s linear;
-  -o-transition: all 0.4s linear;
-  transition: all 0.4s linear;
-  color: white; }
-
-.navigation__menu .menu__item a:hover {
-  background-color: #ffd214;
-  color: black; }
+  .header .header__navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly; }
+    .header .header__navigation #navMenu {
+      padding-left: 0; }
+    .header .header__navigation #menuIcon {
+      margin: 2vh;
+      display: none;
+      cursor: pointer;
+      color: #ffd214;
+      padding: 3px; }
+    .header .header__navigation .navigation__menu {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      list-style: none;
+      margin-bottom: 0;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      .header .header__navigation .navigation__menu .menu__item {
+        margin: 0.8vw;
+        text-align: center; }
+        .header .header__navigation .navigation__menu .menu__item a {
+          padding: 20px;
+          text-decoration: none;
+          -webkit-transition: all 0.4s linear;
+          -o-transition: all 0.4s linear;
+          transition: all 0.4s linear;
+          color: white; }
+          .header .header__navigation .navigation__menu .menu__item a:hover {
+            background-color: #ffd214;
+            color: black; }
 
 ul li p {
   -webkit-text-size-adjust: 5%;
@@ -56,3 +58,212 @@ ul li p {
   text-align: center;
   color: #3f3f3f;
   padding-top: 0.2rem; }
+
+main {
+  min-height: 100%; }
+
+.main {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  vertical-align: middle; }
+
+h2 {
+  -webkit-text-size-adjust: 10%;
+  -moz-text-size-adjust: 10%;
+  -ms-text-size-adjust: 10%;
+  text-size-adjust: 10%;
+  text-align: center;
+  color: crimson;
+  padding-top: 1rem; }
+
+.hTitulo {
+  color: black;
+  background-color: #ffd214;
+  text-justify: distribute;
+  text-align: center;
+  font-size: 18px;
+  padding: 0.4rem; }
+
+.contenedor {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 2%; }
+
+.contenedor .form .form-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around; }
+
+.contenedor .form .form-header .titulo {
+  font-family: arial;
+  color: #ffd214;
+  margin-left: 10px;
+  -webkit-text-size-adjust: 10%;
+  -moz-text-size-adjust: 10%;
+  -ms-text-size-adjust: 10%;
+  text-size-adjust: 10%;
+  text-align: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-top: 2rem; }
+
+.contenedor .form {
+  background: rgba(0, 0, 0, 0.4);
+  margin: auto;
+  padding: 10px, 20px;
+  padding-bottom: 25px;
+  border-radius: 15px; }
+
+.contenedor .form .form-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  font-size: 16px;
+  font-family: arial;
+  font: bolder;
+  position: relative;
+  margin-left: 5%;
+  color: white;
+  padding: 0,5%; }
+
+#nombre, #telefono, #mail, #consulta {
+  font-family: arial;
+  color: black;
+  width: 90%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  margin-left: 5%;
+  border: none;
+  border-top: solid 4px #ffd214;
+  outline: none; }
+
+footer {
+  width: 100%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#c9c9c9), to(#ffffff));
+  background-image: -o-linear-gradient(top, #c9c9c9, #ffffff);
+  background-image: linear-gradient(to bottom, #c9c9c9, #ffffff); }
+
+footer .footergrande {
+  width: 100%;
+  margin: auto;
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row: repeat 2, 1fr;
+  text-align: center;
+  padding: 20px 0px;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+footer .footergrande .box figure {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+footer .footergrande .box figure img {
+  width: 120px; }
+
+#titulo-footer {
+  color: black;
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-family: Arial;
+  font-weight: bolder; }
+
+footer .footergrande .box p {
+  color: #3f3f3f;
+  margin-bottom: 10px; }
+
+footer .footergrande .redes-sociales a {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 20px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  color: white;
+  margin-right: auto;
+  background-color: #3f3f3f;
+  text-align: center;
+  -webkit-transition: all 300ms ease;
+  -o-transition: all 300ms ease;
+  transition: all 300ms ease;
+  border-radius: 20px; }
+
+footer .footergrande .redes-sociales a:hover {
+  color: #000000;
+  background-color: #ffd214; }
+
+footer .subfooter {
+  background-color: crimson;
+  text-align: center;
+  padding: 10px;
+  color: white;
+  font-size: 13px; }
+
+.contenedorGal {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding-bottom: 0.5rem; }
+
+#enviar {
+  display: flex;
+  justify-content: center;
+  margin: auto; }
+
+@media screen and (max-width: 768px) {
+  main {
+    min-height: unset; }
+  #menuIcon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .header .header__navigation {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .header__navigation .navigation__menu {
+    display: none; }
+  .navigation__menu .menu__item {
+    padding: 20px 0; }
+  .header .navigation__menu--extended {
+    display: block;
+    width: 50%;
+    border-top: 2px solid #ffd214;
+    font-size: 12px; }
+  footer .footergrande {
+    -ms-grid-columns: unset;
+    grid-template-columns: unset; }
+  footer .footergrande .box {
+    padding-left: 20px;
+    padding-right: 20px; }
+  #titulo-footer {
+    color: black;
+    margin-bottom: 10px;
+    font-size: 12px; } }
