--- a/css/style.css
+++ b/css/style.css
@@ -61,163 +61,131 @@ ul li p {
 
 main {
   min-height: 100%; }
-
-.main {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  vertical-align: middle; }
-
-h2 {
-  -webkit-text-size-adjust: 10%;
-  -moz-text-size-adjust: 10%;
-  -ms-text-size-adjust: 10%;
-  text-size-adjust: 10%;
-  text-align: center;
-  color: crimson;
-  padding-top: 1rem; }
-
-.hTitulo {
-  color: black;
-  background-color: #ffd214;
-  text-justify: distribute;
-  text-align: center;
-  font-size: 18px;
-  padding: 0.4rem; }
-
-.contenedor {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 2%; }
-
-.contenedor .form .form-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-  justify-content: space-around; }
-
-.contenedor .form .form-header .titulo {
-  font-family: arial;
-  color: #ffd214;
-  margin-left: 10px;
-  -webkit-text-size-adjust: 10%;
-  -moz-text-size-adjust: 10%;
-  -ms-text-size-adjust: 10%;
-  text-size-adjust: 10%;
-  text-align: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding-top: 2rem; }
-
-.contenedor .form {
-  background: rgba(0, 0, 0, 0.4);
-  margin: auto;
-  padding: 10px, 20px;
-  padding-bottom: 25px;
-  border-radius: 15px; }
-
-.contenedor .form .form-label {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-line-pack: center;
-  align-content: center;
-  font-size: 16px;
-  font-family: arial;
-  font: bolder;
-  position: relative;
-  margin-left: 5%;
-  color: white;
-  padding: 0,5%; }
-
-#nombre, #telefono, #mail, #consulta {
-  font-family: arial;
-  color: black;
-  width: 90%;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -ms-flex-line-pack: center;
-  align-content: center;
-  margin-left: 5%;
-  border: none;
-  border-top: solid 4px #ffd214;
-  outline: none; }
+  main .contenedor {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 2%; }
+    main .contenedor .form {
+      background: rgba(0, 0, 0, 0.4);
+      margin: auto;
+      padding: 10px, 20px;
+      padding-bottom: 25px;
+      border-radius: 15px; }
+      main .contenedor .form .form-header {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-pack: distribute;
+        justify-content: space-around; }
+        main .contenedor .form .form-header .titulo {
+          font-family: arial;
+          color: #ffd214;
+          margin-left: 10px;
+          -webkit-text-size-adjust: 10%;
+          -moz-text-size-adjust: 10%;
+          -ms-text-size-adjust: 10%;
+          text-size-adjust: 10%;
+          text-align: center;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
+          align-items: center;
+          padding-top: 2rem; }
+      main .contenedor .form .form-label {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-line-pack: center;
+        align-content: center;
+        font-size: 16px;
+        font-family: arial;
+        font: bolder;
+        position: relative;
+        margin-left: 5%;
+        color: white;
+        padding: 0,5%; }
+      main .contenedor .form #nombre, main .contenedor .form #telefono, main .contenedor .form #mail, main .contenedor .form #consulta {
+        font-family: arial;
+        color: black;
+        width: 90%;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -ms-flex-line-pack: center;
+        align-content: center;
+        margin-left: 5%;
+        border: none;
+        border-top: solid 4px #ffd214;
+        outline: none; }
+  main .hTitulo {
+    color: black;
+    background-color: #ffd214;
+    text-justify: distribute;
+    text-align: center;
+    font-size: 18px;
+    padding: 0.4rem; }
 
 footer {
   width: 100%;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#c9c9c9), to(#ffffff));
-  background-image: -o-linear-gradient(top, #c9c9c9, #ffffff);
-  background-image: linear-gradient(to bottom, #c9c9c9, #ffffff); }
-
-footer .footergrande {
-  width: 100%;
-  margin: auto;
-  display: -ms-grid;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-row: repeat 2, 1fr;
-  text-align: center;
-  padding: 20px 0px;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap; }
-
-footer .footergrande .box figure {
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
-
-footer .footergrande .box figure img {
-  width: 120px; }
-
-#titulo-footer {
-  color: black;
-  margin-bottom: 10px;
-  font-size: 18px;
-  font-family: Arial;
-  font-weight: bolder; }
-
-footer .footergrande .box p {
-  color: #3f3f3f;
-  margin-bottom: 10px; }
-
-footer .footergrande .redes-sociales a {
-  display: inline-block;
-  text-decoration: none;
-  font-size: 20px;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  color: white;
-  margin-right: auto;
-  background-color: #3f3f3f;
-  text-align: center;
-  -webkit-transition: all 300ms ease;
-  -o-transition: all 300ms ease;
-  transition: all 300ms ease;
-  border-radius: 20px; }
-
-footer .footergrande .redes-sociales a:hover {
-  color: #000000;
-  background-color: #ffd214; }
-
-footer .subfooter {
-  background-color: crimson;
-  text-align: center;
-  padding: 10px;
-  color: white;
-  font-size: 13px; }
+  background-image: linear-gradient(to bottom, #c9c9c9, white); }
+  footer .footergrande {
+    width: 100%;
+    margin: auto;
+    display: -ms-grid;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row: repeat 2, 1fr;
+    text-align: center;
+    padding: 20px 0px;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+    footer .footergrande .box figure {
+      width: 100%;
+      height: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      footer .footergrande .box figure img {
+        width: 120px; }
+    footer .footergrande .box #titulo-footer {
+      color: black;
+      margin-bottom: 10px;
+      font-size: 18px;
+      font-family: Arial;
+      font-weight: bolder; }
+      footer .footergrande .box #titulo-footer p {
+        color: #3f3f3f;
+        margin-bottom: 10px; }
+    footer .footergrande .box .redes-sociales a {
+      display: inline-block;
+      text-decoration: none;
+      font-size: 20px;
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      color: white;
+      margin-right: auto;
+      background-color: #3f3f3f;
+      text-align: center;
+      -webkit-transition: all 300ms ease;
+      -o-transition: all 300ms ease;
+      transition: all 300ms ease;
+      border-radius: 20px; }
+      footer .footergrande .box .redes-sociales a:hover {
+        color: #000000;
+        background-color: #ffd214; }
+  footer .subfooter {
+    background-color: crimson;
+    text-align: center;
+    padding: 10px;
+    color: white;
+    font-size: 13px; }
 
 .contenedorGal {
   display: flex;
@@ -233,13 +201,6 @@ footer .subfooter {
 @media screen and (max-width: 768px) {
   main {
     min-height: unset; }
-  #menuIcon {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center; }
   .header .header__navigation {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -248,22 +209,29 @@ footer .subfooter {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center; }
-  .header__navigation .navigation__menu {
-    display: none; }
-  .navigation__menu .menu__item {
-    padding: 20px 0; }
-  .header .navigation__menu--extended {
-    display: block;
-    width: 50%;
-    border-top: 2px solid #ffd214;
-    font-size: 12px; }
+    .header .header__navigation #menuIcon {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; }
+    .header .header__navigation .navigation__menu {
+      display: none; }
+      .header .header__navigation .navigation__menu--extended {
+        display: block;
+        width: 50%;
+        border-top: 2px solid #ffd214;
+        font-size: 12px; }
+      .header .header__navigation .navigation__menu .menu__item {
+        padding: 20px 0; }
   footer .footergrande {
     -ms-grid-columns: unset;
     grid-template-columns: unset; }
-  footer .footergrande .box {
-    padding-left: 20px;
-    padding-right: 20px; }
-  #titulo-footer {
-    color: black;
-    margin-bottom: 10px;
-    font-size: 12px; } }
+    footer .footergrande .box {
+      padding-left: 20px;
+      padding-right: 20px; }
+      footer .footergrande .box #titulo-footer {
+        color: black;
+        margin-bottom: 10px;
+        font-size: 12px; } }
