--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -1,3 +1,6 @@
+@import 'variables.scss';
+
+
 *{
     margin: 0;
     padding: 0;
@@ -7,247 +10,252 @@ body{
     font-family: Arial;
     font-size: 14px;
     background-image: url(../imagenes/patt3.png);
+}
 
-    .header{
-        background-color: black;
-        position: sticky;
-        width: 100%;
-        z-index: 9999;
+.header{
+    background-color: black;
+    position: sticky;
+    width: 100%;
+    z-index: 9999;
 
-        .header__navigation {
+    .header__navigation {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+        justify-content: space-evenly;
+
+        #navMenu{
+            padding-left: 0;
+        }
+
+        #menuIcon {
+            margin: 2vh;
+            display: none;
+            cursor: pointer;
+            color: $primary-color;
+            padding: 3px
+        }
+
+        .navigation__menu {
             display: -webkit-box;
             display: -ms-flexbox;
             display: flex;
-            -webkit-box-pack: space-evenly;
-            -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+            list-style: none;
+            margin-bottom: 0;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
 
-            #navMenu{
-                padding-left: 0;
+            .menu__item {
+                margin: 0.8vw;
+                text-align: center;
+
+                a{
+                    padding: 20px;
+                    text-decoration: none;
+                    -webkit-transition: all 0.4s linear;
+                    -o-transition: all 0.4s linear;
+                    transition: all 0.4s linear;
+                    color: rgb(255, 255, 255);
+            
+                    &:hover{
+                        background-color: $primary-color;
+                        color: rgb(0, 0, 0);
+                    }
+                }    
+            }
+        }
+    }
+}
+
+ul li p{
+    -webkit-text-size-adjust: 5%;
+    -moz-text-size-adjust: 5%;
+        -ms-text-size-adjust: 5%;
+            text-size-adjust: 5%;
+    text-align: center;
+    color: rgb(63, 63, 63);
+    padding-top: 0.2rem;
+}
+
+main {
+    min-height: 100%;
+
+    .contenedor{
+        display:-webkit-box;
+        display:-ms-flexbox;
+        display:flex;
+        padding: 2%;
+
+        .form{
+            background: rgba(0,0,0,.4);
+            margin: auto;
+            padding: 10px, 20px;
+            padding-bottom: 25px;
+            border-radius: 15px;
+            
+            .form-header{
+                display:-webkit-box;
+                display:-ms-flexbox;
+                display:flex;
+                -ms-flex-pack: distribute;
+                justify-content: space-around;
+
+                .titulo{
+                    font-family: arial;
+                    color: $primary-color;
+                    margin-left: 10px;
+                    -webkit-text-size-adjust: 10%;
+                    -moz-text-size-adjust: 10%;
+                    -ms-text-size-adjust: 10%;
+                    text-size-adjust: 10%;
+                    text-align: center;
+                    -webkit-box-align: center;
+                    -ms-flex-align: center;
+                    align-items: center;
+                    padding-top: 2rem;
+                }
             }
 
-            #menuIcon {
-                margin: 2vh;
-                display: none;
-                cursor: pointer;
-                color: #ffd214;
-                padding: 3px
-            }
-
-            .navigation__menu {
+            .form-label{
                 display: -webkit-box;
                 display: -ms-flexbox;
                 display: flex;
-                list-style: none;
-                margin-bottom: 0;
-                -webkit-box-align: center;
-                -ms-flex-align: center;
-                align-items: center;
+                -ms-flex-line-pack: center;
+                align-content: center;
+                font-size: 16px;
+                font-family: arial;
+                font: bolder;
+                position: relative;
+                margin-left: 5%;
+                color: rgb(255, 255, 255);
+                padding: 0,5%;        
+            }
 
-                .menu__item {
-                    margin: 0.8vw;
-                    text-align: center;
-
-                    a{
-                        padding: 20px;
-                        text-decoration: none;
-                        -webkit-transition: all 0.4s linear;
-                        -o-transition: all 0.4s linear;
-                        transition: all 0.4s linear;
-                        color: rgb(255, 255, 255);
-                
-                        &:hover{
-                            background-color: #ffd214;
-                            color: rgb(0, 0, 0);
-                        }
-                    }    
-                }
+            #nombre,#telefono,#mail,#consulta{
+                font-family: arial;
+                color: rgb(0, 0, 0);
+                width: 90%;
+                -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                justify-content: center;
+                -ms-flex-line-pack: center;
+                align-content: center;
+                margin-left: 5%;
+                border: none;
+                border-top: solid 4px $primary-color;
+                outline: none;
             }
         }
     }
 
-
-    ul li p{
-        -webkit-text-size-adjust: 5%;
-        -moz-text-size-adjust: 5%;
-            -ms-text-size-adjust: 5%;
-                text-size-adjust: 5%;
-        text-align: center;
-        color: rgb(63, 63, 63);
-        padding-top: 0.2rem;
-    }
-    main {
-        min-height: 100%;
-
-        .contenedor{
-            display:-webkit-box;
-            display:-ms-flexbox;
-            display:flex;
-            padding: 2%;
-
-            .form{
-                background: rgba(0,0,0,.4);
-                margin: auto;
-                padding: 10px, 20px;
-                padding-bottom: 25px;
-                border-radius: 15px;
-                
-                .form-header{
-                    display:-webkit-box;
-                    display:-ms-flexbox;
-                    display:flex;
-                    -ms-flex-pack: distribute;
-                    justify-content: space-around;
-
-                    .titulo{
-                        font-family: arial;
-                        color: #ffd214;
-                        margin-left: 10px;
-                        -webkit-text-size-adjust: 10%;
-                        -moz-text-size-adjust: 10%;
-                        -ms-text-size-adjust: 10%;
-                        text-size-adjust: 10%;
-                        text-align: center;
-                        -webkit-box-align: center;
-                        -ms-flex-align: center;
-                        align-items: center;
-                        padding-top: 2rem;
-                    }
-
-                .form-label{
-                    display: -webkit-box;
-                    display: -ms-flexbox;
-                    display: flex;
-                    -ms-flex-line-pack: center;
-                    align-content: center;
-                    font-size: 16px;
-                    font-family: arial;
-                    font: bolder;
-                    position: relative;
-                    margin-left: 5%;
-                    color: rgb(255, 255, 255);
-                    padding: 0,5%;        
-                }
-
-                #nombre,#telefono,#mail,#consulta{
-                    font-family: arial;
-                    color: rgb(0, 0, 0);
-                    width: 90%;
-                    -webkit-box-pack: center;
-                    -ms-flex-pack: center;
-                    justify-content: center;
-                    -ms-flex-line-pack: center;
-                    align-content: center;
-                    margin-left: 5%;
-                    border: none;
-                    border-top: solid 4px #ffd214;
-                    outline: none;
-
     .hTitulo{
         color: rgb(0, 0, 0);
-        background-color: #ffd214;
+        background-color: $primary-color;
         text-justify: distribute;
         text-align: center;
         font-size: 18px;
         padding: 0.4rem
     }
+}
 
+footer{
+    width: 100%;
+    background-image: $footer-gradient;
 
-
-    footer{
+    .footergrande{
         width: 100%;
-        background-image: linear-gradient(to bottom, rgb(201, 201, 201),#ffffff);
-
-        .footergrande{
-            width: 100%;
-            margin: auto;
-            display: -ms-grid;
-            display: grid;
-            grid-template-columns: repeat(3,1fr);
-            grid-row: repeat (2,1fr);
-            text-align: center;
-            padding: 20px 0px;
-            -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-        
-            .box{ 
-
-                figure{
-                    width: 100%;
-                    height: 100%;
-                    display: -webkit-box;
-                    display: -ms-flexbox;
-                    display: flex;
-                    -webkit-box-pack: center;
-                    -ms-flex-pack: center;
-                    justify-content: center;
-                    -webkit-box-align: center;
-                    -ms-flex-align: center;
-                    align-items: center;
-                
-                    img{
-                        width: 120px;
-                
-                #titulo-footer{
-                    color: black;
-                    margin-bottom: 10px;
-                    font-size: 18px;
-                    font-family: Arial;
-                    font-weight: bolder;
-
-                    p{
-                        color: rgb(63, 63, 63);
-                        margin-bottom: 10px;
-                
-                .redes-sociales{ 
-                
-                    a{
-                        display: inline-block;
-                        text-decoration: none;
-                        font-size: 20px;
-                        width: 40px;
-                        height: 40px;
-                        line-height: 40px;
-                        color: rgb(255, 255, 255);
-                        margin-right: auto;
-                        background-color: rgb(63, 63, 63);
-                        text-align:center;
-                        -webkit-transition: all 300ms ease;
-                        -o-transition: all 300ms ease;
-                        transition: all 300ms ease;
-                        border-radius: 20px;        
-                        
-                        &:hover{
-                            color:#000000;
-                            background-color: #ffd214;
-                        }    
-                    }
-                }
-            }    
-        
-        .subfooter{
-            background-color: crimson;
-            text-align: center;
-            padding: 10px;
-            color: white;
-            font-size: 13px;  
-        }      
-    }
-
-
-
-    .contenedorGal{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        padding-bottom: 0.5rem;
-    }
-
-    #enviar{
-        display: flex;
-        justify-content: center;
         margin: auto;
+        display: -ms-grid;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-row: repeat (2,1fr);
+        text-align: center;
+        padding: 20px 0px;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    
+        .box{ 
+            figure{
+                width: 100%;
+                height: 100%;
+                display: -webkit-box;
+                display: -ms-flexbox;
+                display: flex;
+                -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                justify-content: center;
+                -webkit-box-align: center;
+                -ms-flex-align: center;
+                align-items: center;
+            
+                img{
+                    width: 120px;
+                }
+            }
+
+            #titulo-footer{
+                color: black;
+                margin-bottom: 10px;
+                font-size: 18px;
+                font-family: Arial;
+                font-weight: bolder;
+
+                p{
+                    color: rgb(63, 63, 63);
+                    margin-bottom: 10px;
+                }   
+            }
+            
+            .redes-sociales{ 
+                a{
+                    display: inline-block;
+                    text-decoration: none;
+                    font-size: 20px;
+                    width: 40px;
+                    height: 40px;
+                    line-height: 40px;
+                    color: rgb(255, 255, 255);
+                    margin-right: auto;
+                    background-color: rgb(63, 63, 63);
+                    text-align:center;
+                    -webkit-transition: all 300ms ease;
+                    -o-transition: all 300ms ease;
+                    transition: all 300ms ease;
+                    border-radius: 20px;        
+                    
+                    &:hover{
+                        color:#000000;
+                        background-color: $primary-color;
+                    }    
+                }
+            }
+        }     
     }
+    
+    .subfooter{
+        background-color: crimson;
+        text-align: center;
+        padding: 10px;
+        color: white;
+        font-size: 13px;  
+    }
+}
+
+.contenedorGal{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-bottom: 0.5rem;
+}
+
+#enviar{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
 
 @media screen and (max-width: 768px) {
     
@@ -273,6 +281,7 @@ body{
                 -webkit-box-pack: center;
                 -ms-flex-pack: center;
                 justify-content: center;
+            }
 
             .navigation__menu {
                 display: none; 
@@ -280,7 +289,7 @@ body{
                 &--extended {
                     display: block;
                     width: 50%;
-                    border-top: 2px solid #ffd214;
+                    border-top: 2px solid $primary-color;
                     font-size: 12px;
                 }
 
@@ -292,10 +301,9 @@ body{
     }
     
     footer{
-        
         .footergrande {
-        -ms-grid-columns: unset;
-        grid-template-columns: unset;
+            -ms-grid-columns: unset;
+            grid-template-columns: unset;
             
             .box{
                 padding-left: 20px;
